# django-bleach

./: .coveragerc  .editorconfig  .gitignore  .pep8  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  ChangeLog  LICENSE  MANIFEST.in  NEWS  README.rst  Readme.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  docs.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
django_bleach/: __init__.py  forms.py  models.py  utils.py
django_bleach/templatetags/: bleach.py  bleach_tags.py
django_bleach/tests/: test_forms.py  test_modelformfield.py  test_models.py  test_settings.py  test_templatetags.py
docs/: Makefile  conf.py  index.rst  requirements.in  requirements.txt  settings.rst  setup.rst  usage.rst
requirements/: compile.py  py310-django32.txt  py310-django42.txt  py311-django41.txt  py311-django42.txt  py312-django42.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py39-django40.txt  py39-django41.txt  requirements.in
testproject/: .coveragerc  constants.py  forms.py  manage.py  models.py  requirements.in  requirements.txt  settings.py  urls.py  views.py
testproject/migrations/: 0001_initial.py
testproject/templates/: home.html  model_form.html
